fix json file